--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: RmRMR
 Type: Package
 Title: Feature Subset Selection Using the mRMR Approach
-Version: 0.9-0
+Version: 0.9-9
 Encoding: UTF-8
-Date: 2015-11-07
+Date: 2017-01-04
 URL: https://github.com/janusza/RmRMR
 Authors@R: c(person("Andrzej", "Janusz", role = c("aut", "cre"),
                     email = "janusza@mimuw.edu.pl"),
@@ -11,14 +11,18 @@ Authors@R: c(person("Andrzej", "Janusz", role = c("aut", "cre"),
 			 person("Marek", "Grzegorowski", role = "ctb"),
              person("Dominik", "Ślęzak", role = "ctb"))
 Maintainer: Andrzej Janusz <janusza@mimuw.edu.pl>
-Description: The package provides an implementation of the minimal Redundancy Maximal Relevance framework for selecting compact subsets of features from high dimensional data. It was created specifically for DISESOR project.
+Description: The package provides an implementation of the minimal Redundancy
+    Maximal Relevance framework for selecting compact subsets of features from high
+    dimensional data. It was created specifically for DISESOR project.
 License: GPL (>=2)
 LazyData: TRUE
 Depends:
-  R (>= 3.2.0)
+    R (>= 3.2.0),
+    Rcpp
+LinkingTo: Rcpp
 Imports:
-  data.table (>= 1.9.4),
-  parallel (>= 3.2.0),
-  caTools
-Enhances:
-  RoughSets (>= 1.3-0)
+    data.table (>= 1.9.4),
+    parallel (>= 3.2.0),
+    caTools
+Enhances: RoughSets (>= 1.3-0)
+RoxygenNote: 5.0.1
